<resources>
    <string name="app_name">VetStreet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_application_id" translatable="false">864236583723822</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb864236583723822</string>
    <string name="news">News</string>
    <string name="health">Health</string>
    <string name="tips">Tips</string>
    <string name="pet_geeks">Pet Geeks</string>
    <string name="latest_news">Latest news</string>
    <string name="dog_news">Dog News</string>
    <string name="cat_news">Cat News</string>
    <string name="dr_marty_becker">Dr. Marty Becker</string>
    <string name="description">description</string>
    <string name="title">Title</string>
    <string name="news_">News</string>
    <string name="tips_">Tips</string>
    <string name="pet_geeks_">Pet Geeks</string>
    <string name="health_">Health</string>
    <string name="favorite">Favorite</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="rate_us">Rate Us</string>
    <string name="home">Home</string>
    <string name="cat_101">Cat 101</string>
    <string name="kitten_101">Kitten 101</string>
    <string name="puppy_101">Puppy 101</string>
    <string name="personal_area">Personal Area</string>
    <string name="title_activity_find_avet">Map</string>
    <string name="user_email">user email</string>
    <string name="user_name">user name</string>
    <string name="favorites">favorites</string>
    <string name="pet_blog">Pet Blog</string>
    <string name="vet_s_near_me">Vet\'s Near Me...</string>
    <string name="shop_for_you_pet">Shop for you Pet</string>
    <string name="rate_us_">Rate Us</string>
    <string name="favorites_">Favorites</string>
    <string name="new_message_here">new message here...</string>
    <string name="logopic3">logoPic3</string>
    <string name="logopic2">logoPic2</string>
    <string name="logopic1">logoPic1</string>
    <string name="we_care_about_what_you_think">We Care About What You Think</string>
    <string name="contact_us">Contact Us</string>
    <string name="write_here">write here....</string>
    <string name="_10_10_2000">10.10.2000</string>
    <string name="user_text">user text</string>
    <string name="latest_news_">Latest News</string>
    <string name="dog_news_">Dog News</string>
    <string name="cat_news_">Cat News</string>
    <string name="dr_marty_becker_">dr marty becker</string>
</resources>
