<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/news"
            android:title="@string/news_" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/tip"
            android:title="@string/tips_" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/humor"
            android:title="@string/pet_geeks_" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/health"
            android:title="@string/health_" />

        <item
            android:id="@+id/favorite"
            android:icon="@drawable/favorite"
            android:title="@string/favorite" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />

            <item
                android:id="@+id/rate"
                android:icon="@drawable/favorite"
                android:title="@string/rate_us" />

        </menu>
    </item>

</menu>
