<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4597be"
    tools:context="shafir.irena.vetstreet.NewsActivity">

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btnLatestNews"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:elevation="@dimen/bootstrap_h4_text_size"
        android:text="@string/latest_news"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Menu"
        app:bootstrapBrand="info"
        app:bootstrapSize="lg"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDoc" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btnDogNews"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginTop="36dp"
        android:elevation="@dimen/bootstrap_h4_text_size"
        android:text="@string/dog_news"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Menu"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintTop_toBottomOf="@+id/ivKids"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnLatestNews"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btnCatNews"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:elevation="@dimen/bootstrap_h4_text_size"
        android:text="@string/cat_news"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Menu"
        app:bootstrapBrand="danger"
        app:bootstrapSize="lg"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintTop_toBottomOf="@+id/btnDogNews"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btnMartyBecker"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:elevation="@dimen/bootstrap_h4_text_size"
        android:text="@string/dr_marty_becker"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Menu"
        app:bootstrapBrand="warning"
        app:bootstrapSize="lg"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintTop_toBottomOf="@+id/btnDogNews"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />



    <ImageView
        android:id="@+id/ivDoc"
        android:layout_width="149dp"
        android:layout_height="138dp"
        app:layout_goneMarginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/pet_vet"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

    <ImageView
        android:id="@+id/ivKids"
        android:layout_width="141dp"
        android:layout_height="142dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/vet_visit"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp" />

    <ImageView
        android:id="@+id/ivVetStreetLogo"
        android:layout_width="168dp"
        android:layout_height="161dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/vet_street_logo"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/frame"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ivVetStreetLogo"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
